fixup nginx config

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,15 +3,14 @@ server {
     server_name localhost;
 
     root /app/public;
-    index index.htm  index.html index.php;
 
     location / {
-        try_files $uri $uri/ index.php;
+        try_files $uri $uri/ /index.html;
     }
 
-    location ~ \.php$ {
+    location /api/ {
         fastcgi_pass   php:9000;
-        fastcgi_param  SCRIPT_FILENAME  $document_root/$fastcgi_script_name;
+        fastcgi_param  SCRIPT_FILENAME  $document_root/index.php;
         include        fastcgi_params;
     }
 }
