--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,19 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0",
-        "tymon/jwt-auth": "^1.0"
+        "php": "^8.1",
+        "laravel/framework": "^v10.22.0",
+        "laravel/tinker": "^v2.8.2",
+        "tymon/jwt-auth": "^2.0.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.6",
-        "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.4",
-        "laravel/telescope": "^2.1",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "barryvdh/laravel-ide-helper": "^v2.13.0",
+        "spatie/laravel-ignition": "^2.3.0",
+        "fakerphp/faker": "^v1.23.0",
+        "laravel/telescope": "^v4.16.2",
+        "mockery/mockery": "^1.6.6",
+        "nunomaduro/collision": "^v7.8.1",
+        "phpunit/phpunit": "^10.3.3"
     },
     "config": {
         "optimize-autoloader": true,
@@ -35,12 +34,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
